--- a/src/styles/TodayExtra.css
+++ b/src/styles/TodayExtra.css
@@ -1,45 +1,91 @@
-.todayExtra{
+.todayExtra {
     width: 60%;
     border: solid #001b5a 2px;
     margin: 0 25px;
     border-radius: 25px;
     padding: 25px;
-}
-.extraContainer{
+    height: fit-content;
+    background-color: red;
+  }
+  
+  .extraContainer {
     display: grid;
-    grid-template-columns: 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px;
-    grid-template-rows: 25px 25px 25px 25px 25px 25px  25px 25px 25px 25px 25px;
-    gap: 1em;
-    
-}
-.tExtraCard{
+    grid-template-columns: repeat(4, 1fr); /* 4 columns, each flexible */
+    grid-template-rows: 2fr 2fr;  
+    gap: 1.5em;
+  }
+  
+  .tExtraCard {
     border-radius: 25px;
     padding: 1em;
     border: 1.5px solid #001b5a;
     background-color: hsl(222, 100%, 11%);
-}
-p{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .innerex {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 8px;
+    font-weight: 500;
+  }
+  
+  .tExtraCard p {
+    margin: 0;
+    font-size: 2em;
+    font-weight: 600;
+
+    justify-self: center;
+  }
+  .tExtraCard span{
+    font-size: 1.2em;
+  }
+  
+  img {
+    width: 20px;
+    height: 20px;
+  }
+  
+  .todayHighlight {
     margin-bottom: 20px;
-    font-size: 1.3em;
-}
-.feelsLike{
-    grid-area: 1 / 1 / 6 / 5;
-}
-.humidity{
-    grid-area: 6 / 1 / 12 / 5;
-}
-.visibility{
-    grid-area: 1 / 5 / 6 / 9;
-}
-.wind{
-    grid-area: 6 / 5 / 12 / 9;
-}
-.cloudiness{
-    grid-area: 1 / 13 / 6 / 17;
-}
-.sunRise{
-    grid-area: 1 / 9 / 6 / 13;
-}
-.sunSet{
-    grid-area: 6 / 9 / 12 / 13;
-}
+    font-size: 1.5em;
+  }
+  
+
+  .feelsLike {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3; /* span both rows */
+  }
+  
+  .humidity {
+    grid-column: 2 / 3;
+    grid-row: 1;
+  }
+  
+  .wind {
+    grid-column: 2 / 3;
+    grid-row: 2;
+  }
+  
+  .cloudiness {
+    grid-column: 3 / 4;
+    grid-row: 1;
+  }
+  
+  .visibility {
+    grid-column: 3 / 4;
+    grid-row: 2;
+  }
+  
+  .sunRise {
+    grid-column: 4 / 5;
+    grid-row: 1;
+  }
+  
+  .sunSet {
+    grid-column: 4 / 5;
+    grid-row: 2;
+  }
