--- a/src/styles/DailyForecastCard.css
+++ b/src/styles/DailyForecastCard.css
@@ -1,4 +1,15 @@
 .dForcastCardContainer{
-    height:25vh;
-    background-color: red;
+    /* position: relative; */
+    height:35vh;
+    max-width: 100vw;
+    width: 100%;
+    /* background-color: red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
+/* .dForcastCardContainer canvas {
+    width: 70% !important; 
+    height: 70% !important;
+  } */
