--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -7,5 +7,5 @@ footer{
     justify-content: center;
     /* align-items: flex-start; */
     font-size: .7em;
-    background-color: blue;
+    /* background-color: blue; */
 }
