--- a/src/styles/TodayExtra.css
+++ b/src/styles/TodayExtra.css
@@ -5,7 +5,7 @@
     border-radius: 25px;
     padding: 25px;
     height: fit-content;
-    background-color: red;
+    /* background-color: red; */
   }
   
   .extraContainer {
@@ -22,7 +22,7 @@
     background-color: hsl(222, 100%, 11%);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
   }
   
   .innerex {
@@ -34,14 +34,14 @@
   }
   
   .tExtraCard p {
-    margin: 0;
+    /* margin-top: .5em; */
     font-size: 2em;
     font-weight: 600;
 
-    justify-self: center;
   }
   .tExtraCard span{
     font-size: 1.2em;
+    display: inline-block;
   }
   
   img {
@@ -52,6 +52,14 @@
   .todayHighlight {
     margin-bottom: 20px;
     font-size: 1.5em;
+  }
+  .feelContainer{
+    align-self: flex-start;
+  }
+ 
+  #feel{
+    font-size: 2.3em;
+    margin-top: 20px;
   }
   
 
