--- a/src/styles/TodaySummary.css
+++ b/src/styles/TodaySummary.css
@@ -6,12 +6,16 @@
     border-radius: 25px;
     margin-left: 25px;
 }
+.mainImg{
+    display: flex;
+    align-items: center;
+}
 .mainImg img{
     height: 20em;
     width: 20em;
 }
-.summaryInfo{
-    background-color: blue;
+.summaryInfo > *{
+    margin-top: 15px;
 }
 .mainTemp{
     font-size: 4em;
@@ -19,11 +23,20 @@
     margin-top: 1.5em;
 }
 .weather{
-    font-size: 2em;
+    font-size: 2.5em;
 }
 .description{
-    font-size: 1em;
+    font-size: 1.5em;
+    display: flex;
+    align-items: center;
 }
 .location{
-    font-size: 1em;
+    font-size: 1.5em;
+    display: flex;
+    align-items: center;
+}
+.Icon{
+    height: 1em;
+    width: auto;
+    margin-right: 5px;
 }
