do the forecast chart with 6hr interval

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,11 +1,12 @@
 footer{
     position: absolute;
+    bottom: 10px;
     left: 50%;
     translate: -50% 0;
     height: 2vh;
     display: flex;
     justify-content: center;
     /* align-items: flex-start; */
-    font-size: .7em;
+    font-size: 1em;
     /* background-color: blue; */
 }
