did the toggle btns styling, fix some alignments

--- a/src/styles/ForecastChart.css
+++ b/src/styles/ForecastChart.css
@@ -1,4 +1,7 @@
 .forecastChartContainer{
-    height:25vh;
+    height:20vh;
     background-color: blue;
+    width: 95vw;
+    align-self: center;
+    margin-bottom: 20px;
 }
