--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,28 @@
     display: flex;
     flex-direction: column;
 }
+
+.tabToggle > button{
+    font-size: 1em;
+    padding: 0.3em 1.5em;
+    /* height: em; */
+    border: none;
+    background-color: inherit;
+    color: white;
+    outline: none;
+    border-radius: 999px;
+    /* margin: 0 5px; */
+    cursor: pointer;
+}
+.tabToggle{
+    display: flex;
+    width: fit-content;
+    margin-left: 8.3em;
+    margin-top: 30px;
+    border: solid 1px #001b5a;
+    border-radius: 25px;
+    gap: 5px;
+}
+.tabToggle > .active{
+    background-color: blue;
+}
