--- a/src/styles/DailyForecastCard.css
+++ b/src/styles/DailyForecastCard.css
@@ -1,12 +1,14 @@
 .dForcastCardContainer{
     /* position: relative; */
-    height:35vh;
+    height:25vh;
     max-width: 100vw;
-    width: 100%;
+    width: 100vw;
     /* background-color: red; */
     display: flex;
     justify-content: center;
     align-items: center;
+    align-self: center;
+    
     
 }
 /* .dForcastCardContainer canvas {
