--- a/src/styles/ForecastTab.css
+++ b/src/styles/ForecastTab.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     gap: 2em;
+    margin-left: -3em;
 }
 .fiveDaycard{
     width: 15em;
@@ -13,13 +14,13 @@
     padding: 1em;
 }
 h3{
-    font-size: 2.6em;
+    font-size: 2.5em;
 }
 .avgTemp{
-    font-size: 2.3em;
+    font-size: 2.2em;
 }
 .weatherText{
-    font-size: 1.7em;
+    font-size: 1.5em;
 }   
 .weatherIcon{
     height: 7em;
@@ -30,7 +31,4 @@ h3{
     display: flex;
     margin-top: 1em;
     align-items: center;
-}
-.textDataContainer{
-
 }
