--- a/src/styles/TodayTab.css
+++ b/src/styles/TodayTab.css
@@ -1,6 +1,8 @@
 .todayTab{
     display: flex;
     margin-top: 20px;
-    width: 93vw;
+    width: 90vw;
     align-self: center;
+    height: 50vh;
+    margin-left: 3em;
 }
