--- a/src/styles/ForecastChart.css
+++ b/src/styles/ForecastChart.css
@@ -1,7 +1,10 @@
 .forecastChartContainer{
-    height:20vh;
-    background-color: blue;
-    width: 95vw;
+    height:27vh;
+    max-width: 100vw;
+    width: 100vw;
+    /* background-color: red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     align-self: center;
-    margin-bottom: 20px;
 }
