--- a/src/styles/ForecastTab.css
+++ b/src/styles/ForecastTab.css
@@ -2,6 +2,17 @@
     height: 50vh;
     align-self: center;
     display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+.locationName{
+    margin-top:.5em;
+    font-size: 2.5em;
+    margin-left: -1em;
+}
+.fiveDaycardContainer{
+    align-self: center;
+    display: flex;
     align-items: center;
     gap: 2em;
     margin-left: -3em;
