--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -96,4 +96,36 @@ input:-webkit-autofill {
     background-color: blue;
 }
 
+@media (max-width: 768px) {
+    header {
+      flex-direction: column;
+      height: auto;
+      gap: 1em;
+    }
+  
+    .search {
+      width: 90%;
+    }
+  
+    .toggleContainer {
+      width: 90%;
+      flex-direction: column;
+      gap: 10px;
+    }
+  
+    .climatic {
+      font-size: 2.5em;
+      text-align: center;
+    }
+  
+    input {
+      font-size: 1em;
+    }
+  
+    .toggle {
+      padding: 0.4em 1em;
+      font-size: 1em;
+    }
+  }
+  
   
