--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -86,16 +86,46 @@ input:-webkit-autofill {
     padding: 0.3em 1.5em;
     border-radius: 999px;
 }
+.mode{
+    width: 5em;
+    padding: 0;
+    border: none;
+    padding: .1em;
+    justify-content: space-between;
+}
+.mode > button{
+    padding: 0.3em .9em;
+    border-radius: 50%;
+}
 .climatic{
     font-size: 4em;
 }
 .active{
     background-color: blue;
 }
-.activeMode{
-    background-color: blue;
+.dayIsActive{
+    background-image: url(../assets/images/daySky.jpg);
+    background-position: center;
+    background-size: cover;
 }
-
+.nightIsActive{
+    background-image: url(../assets/images/nightSky.jpg);
+    background-position: center;
+    background-size: cover;
+}
+.light{
+    background: transparent;
+}
+.night{
+    background-color: transparent;
+}
+.LightMode{
+   background-color: #FFD700;
+   
+}
+.NightMode{
+    background-color: rgb(221, 221, 221);
+}
 @media (max-width: 768px) {
     header {
       flex-direction: column;
@@ -117,7 +147,6 @@ input:-webkit-autofill {
       font-size: 2.5em;
       text-align: center;
     }
-  
     input {
       font-size: 1em;
     }
