--- a/src/styles/ForecastChart.css
+++ b/src/styles/ForecastChart.css
@@ -4,7 +4,13 @@
     width: 100vw;
     /* background-color: red; */
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     align-self: center;
+}
+.forecastChartContainer p{
+    align-self: flex-start;
+    font-size: 1.5em;
+    margin-left: 5em;
 }
