--- a/src/styles/TodayTab.css
+++ b/src/styles/TodayTab.css
@@ -4,5 +4,6 @@
     width: 90vw;
     align-self: center;
     height: 50vh;
-    margin-left: 3em;
+    /* margin-left: 3em; */
+    /* padding-left: 2rem; */
 }
