--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .appContainer{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    /* padding-left: 2rem; */
+}
+.appContainer > *{
+    width: 90%;
 }
 
 .tabToggle > button{
@@ -18,12 +23,14 @@
 .tabToggle{
     display: flex;
     width: fit-content;
-    margin-left: 8.3em;
+    margin-left: 5em;
     margin-top: 30px;
     border: solid 1px #001b5a;
     border-radius: 25px;
     gap: 5px;
+    align-self: flex-start;
 }
+
 .tabToggle > .active{
     background-color: blue;
 }
