--- a/src/styles/DailyForecastCard.css
+++ b/src/styles/DailyForecastCard.css
@@ -1,7 +1,7 @@
 .dForcastCardContainer{
     height:27vh;
-    max-width: 100vw;
-    width: 100vw;
+    /* max-width: 100vw; */
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,7 +13,7 @@
 .dForcastCardContainer p{
     align-self: flex-start;
     font-size: 1.5em;
-    margin-left: 5em;
+    /* margin-left: 5em; */
     margin-top:.5em ;
     /* margin-bottom:.5em ; */
 }
