--- a/src/styles/ForecastChart.css
+++ b/src/styles/ForecastChart.css
@@ -1,16 +1,17 @@
 .forecastChartContainer{
     height:27vh;
-    max-width: 100vw;
-    width: 100vw;
+    /* max-width: 100vw; */
+    width: 90%;
     /* background-color: red; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     align-self: center;
+    /* padding-left: 2rem; */
 }
 .forecastChartContainer p{
     align-self: flex-start;
     font-size: 1.5em;
-    margin-left: 5em;
+    /* margin-left: 5em; */
 }
