--- a/src/styles/TodaySummary.css
+++ b/src/styles/TodaySummary.css
@@ -4,7 +4,7 @@
     display: flex;
     border: 2px solid #001b5a;
     border-radius: 25px;
-    margin-left: 25px;
+    /* margin-left: 25px; */
 }
 .mainImg{
     display: flex;
