--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,20 @@
     align-items: center;
     /* padding-left: 2rem; */
 }
-.appContainer > *{
+/* .appContainer > *{
     width: 90%;
+} */
+.mainContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+.mainContainer > *{
+    width: 90%;
+    /* height: fit-content; */
+}
+
 
 .tabToggle > button{
     font-size: 1em;
