--- a/src/styles/ForecastChart.css
+++ b/src/styles/ForecastChart.css
@@ -15,3 +15,11 @@
     font-size: 1.5em;
     /* margin-left: 5em; */
 }
+.fcustom{
+    border: 1px solid #001b5a;
+    background-color: hsl(222, 100%, 11%);
+    padding: 20px 10px;
+    border-radius: 25px;
+    font-size: 14px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.2);  
+}
