responsiveness for mobile upto ipad air

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body{
     max-width: 100vw;
     height: 100vh;
     width: 100vw;
+    overflow-x: hidden;
 }
 body.lightMode{
     background-color: var(--customLightBlue);
