--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 1em;
+    /* background-color: blueviolet; */
     /* padding-left: 2rem; */
 }
 /* .appContainer > *{
@@ -45,3 +50,29 @@
 .tabToggle > .active{
     background-color: blue;
 }
+@media (max-width: 991px) {
+    .tabToggle {
+        margin-left: calc(5% );
+        flex-wrap: wrap;
+        justify-content: center;
+        width: fit-content;
+        margin-top: 8px;
+      }
+}
+@media (max-width: 768px) {
+    .tabToggle {
+      margin-left: calc(5% );
+      flex-wrap: wrap;
+      justify-content: center;
+      width: fit-content;
+    }
+  
+    .tabToggle > button {
+      font-size: 0.9rem;
+      padding: 0.4em 1em;
+    }
+    .appContainer{
+        padding-bottom: 1em;
+    }
+  }
+  
