--- a/src/styles/DailyForecastCard.css
+++ b/src/styles/DailyForecastCard.css
@@ -1,5 +1,5 @@
 .dForcastCardContainer{
-    height:27vh;
+    height:25vh;
     /* max-width: 100vw; */
     width: 90%;
     display: flex;
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items: center;
     align-self: center;
+    margin: 0;
     /* position: relative; */
     /* background-color: red; */
 }
@@ -20,8 +21,33 @@
 .dcustom{
     border: 1px solid #001b5a;
     background-color: hsl(222, 100%, 11%);
-        padding: 10px;
-        border-radius: 25px;
-        font-size: 14px;
-        box-shadow: 0 2px 8px rgba(0,0,0,0.2);  
+    padding: 10px;
+    border-radius: 25px;
+    font-size: 14px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.2);  
+}
+.chartWrapper{
+    width: 100%;
+    height: 100%;
+}
+@media (max-width: 991px) {
+  
+}
+@media (max-width: 768px) {
+    .dForcastCardContainer p{
+        font-size: 1.2rem;
+        width: 90%;
+        align-self: center;
+        /* margin-left: 1em; */
+    }
+    .dForcastCardContainer{
+        /* height:vh; */
+        /* max-width: 100vw; */
+        width: 100%;
+        /* position: relative; */
+        /* background-color: red; */
+    }
+    .chartWrapper{
+        max-width: 100%;
+    }
 }
