--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 footer{
     position: absolute;
-    bottom: 10px;
+    bottom: 0px;
     left: 50%;
     translate: -50% 0;
     height: 2vh;
@@ -9,4 +9,14 @@ footer{
     /* align-items: flex-start; */
     font-size: 1em;
     /* background-color: blue; */
+}
+@media (max-width: 767px) {
+    footer{
+        font-size: 1em;
+    }
+}
+@media (max-width: 480px){
+    footer{
+        font-size: .6em;
+    }
 }
