--- a/src/styles/ForecastChart.css
+++ b/src/styles/ForecastChart.css
@@ -8,6 +8,8 @@
     justify-content: center;
     align-items: center;
     align-self: center;
+    margin: 0;
+    
     /* padding-left: 2rem; */
 }
 .forecastChartContainer p{
@@ -22,4 +24,9 @@
     border-radius: 25px;
     font-size: 14px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.2);  
+}
+@media (max-width: 768px) {
+    .forecastChartContainer p{
+        font-size: 1rem;
+    }
 }
