--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,14 +1,17 @@
 header{
     width: 90%;
+    max-width: 100vw;
     position: relative;
     font-size: 14px;
-    padding: 10px;
+    /* padding: 10px; */
     /* padding-left: 2em; */
+    /* overflow: scroll; */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 10vh;
-    padding-top: 24px;
+    /* height: 9vh; */
+    height: fit-content;
+    padding-top: 20px;
     align-self: center;
     /* background-color: red; */
     /* border-bottom: solid red; */
@@ -69,12 +72,13 @@ input:-webkit-autofill {
     width: 30%;
     justify-content: space-around;
 }
+
 .unit,.mode{
     display: flex;
     border: solid 1px #001b5a;
     border-radius: 999px;
     gap: 5px;
-    /* width: fit-content; */
+    width: fit-content;
     /* position: relative; */
     /* height: fit-content; */
 } 
@@ -129,35 +133,58 @@ input:-webkit-autofill {
 .NightMode{
     background-color: rgb(221, 221, 221);
 }
+@media (max-width: 991px) {
+  header {
+    flex-direction: column;
+    height: auto;
+    gap: 1em;
+    position: relative;
+    /* padding-left: 1rem; */
+    padding-bottom: 0;
+    margin-bottom: 0;
+    /* background-color: red; */
+  }
+  .search {
+    width: 60%;
+    align-self: flex-start;
+  }
+  .toggleContainer {
+    width: fit-content;
+    gap: 10px;
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    top: 2em;
+    /* width: 50%; */
+    right: 1em;
+  }
+  .searchBtn{
+      height:2.6em ;
+  }
+
+  .climatic {
+    font-size: 2.5em;
+    /* text-align: center; */
+    align-self:flex-start ;
+  }
+  input {
+    font-size: 1em;
+  }
+  .toggle {
+    padding: 0.4em 1em;
+    font-size: 1em;
+  }
+  .mode{
+      height: 2em;
+  }
+}
 @media (max-width: 768px) {
-    header {
-      flex-direction: column;
-      height: auto;
-      gap: 1em;
-    }
-  
     .search {
       width: 90%;
     }
-  
     .toggleContainer {
-      width: 90%;
-      flex-direction: column;
-      gap: 10px;
+      right: 0;
     }
   
-    .climatic {
-      font-size: 2.5em;
-      text-align: center;
-    }
-    input {
-      font-size: 1em;
-    }
-  
-    .toggle {
-      padding: 0.4em 1em;
-      font-size: 1em;
-    }
   }
-  
   
