--- a/src/styles/TodayExtra.css
+++ b/src/styles/TodayExtra.css
@@ -1,7 +1,8 @@
 .todayExtra {
-    width: 55%;
+    width: 65%;
     border: solid #001b5a 2px;
-    margin: 0 25px;
+    margin: 0 ;
+    margin-left: 25px;
     border-radius: 25px;
     padding: 25px;
     height: fit-content;
@@ -96,4 +97,116 @@
   .sunSet {
     grid-column: 4 / 5;
     grid-row: 2;
+  }
+
+
+  
+  @media (max-width: 991px) {
+    .todayExtra {
+      width: 100%; /* max 55rem but flexible */
+      border: 0.125rem solid #001b5a;
+      margin: 0 auto;
+      border-radius: 1.5rem;
+      padding: 1.5rem;
+      box-sizing: border-box;
+    }
+    
+    /* Let grid flow naturally instead of forcing column positions */
+    .extraContainer {
+     display: flex;
+     /* flex-direction: column; */
+     flex-wrap: wrap;
+     flex-grow: 1;
+     gap: 1rem;
+    }
+    
+    .tExtraCard {
+      border-radius: 1.5rem;
+      padding: 1rem;
+      border: 0.1rem solid #001b5a;
+      background-color: hsl(222, 100%, 11%);
+      display: flex;
+      flex-direction: column;
+      width: 30%;
+      justify-content: space-between;
+    }
+    
+    .innerex {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      margin-bottom: 0rem;
+      font-weight: 500;
+    }
+    
+    .tExtraCard p {
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
+    
+    .tExtraCard span {
+      font-size: 1.5rem;
+      display: inline-block;
+    }
+    
+    img {
+      width: 1.25rem;
+      height: 1.25rem;
+    }
+    
+    .todayHighlight {
+      margin-bottom: 1.25rem;
+      font-size: 1.25rem;
+    }
+    
+    .feelContainer {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
+    }
+    
+    #feel {
+      font-size: 1.7rem;
+      margin-top: 0;
+    }
+  }
+  @media (max-width: 820px) {
+    .tExtraCard {
+      border-radius: 1.5rem;
+      padding: 1rem;
+      border: 0.1rem solid #001b5a;
+      background-color: hsl(222, 100%, 11%);
+      display: flex;
+      flex-direction: column;
+      width: 25%;
+      justify-content: space-between;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .tExtraCard {
+      width: 45%;
+      height: 7em;
+      justify-content: space-between;
+    }
+    .tExtraCard span {
+      font-size: 1rem;
+      display: inline-block;
+    }
+    .feelContainer{
+      justify-self: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 0;
+    }
+    .todayHighlight {
+      margin-bottom: 1.25rem;
+      font-size: 1.25rem;
+    }
+    #feel {
+      font-size: 1.5rem;
+    }
+    
   }
