--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -20,3 +20,11 @@ footer{
         font-size: .6em;
     }
 }
+@media (max-width: 300px) {
+    footer{
+        font-size: .5em;
+        width: fit-content;
+        text-align: center;
+    }
+}
+
