--- a/src/styles/DailyForecastCard.css
+++ b/src/styles/DailyForecastCard.css
@@ -29,9 +29,12 @@
 .chartWrapper{
     width: 100%;
     height: 100%;
+    margin-left: -4em;
 }
 @media (max-width: 991px) {
-  
+  .dForcastCardContainer{
+    height:24vh;
+}
 }
 @media (max-width: 768px) {
     .dForcastCardContainer p{
