--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -189,7 +189,7 @@ input:-webkit-autofill {
   }
   @media (max-width: 300px) {
     header{
-      gap: 0.5em;
+      gap: 1rem;
     }
     .searchBtn{
       height:2.1em;
