--- a/src/styles/DailyForecastCard.css
+++ b/src/styles/DailyForecastCard.css
@@ -31,6 +31,9 @@
     height: 100%;
     margin-left: -4em;
 }
+@media (max-width: 1025px) {
+
+}
 @media (max-width: 991px) {
   .dForcastCardContainer{
     height:24vh;
