--- a/src/styles/TodaySummary.css
+++ b/src/styles/TodaySummary.css
@@ -4,6 +4,7 @@
     display: flex;
     border: 2px solid #001b5a;
     border-radius: 25px;
+    flex-grow: 1;
     /* margin-left: 25px; */
 }
 .mainImg{
@@ -39,6 +40,29 @@
     height: 1em;
     width: auto;
     margin-right: 5px;
+}
+@media (max-width :1400px)and (min-width:1000px) and (max-height:1000px) {
+  .todaySummary{
+    height: 40vh;
+  }
+  .mainImg img{
+    height: 15em;
+    width: 15em;
+}
+.summaryInfo > *{
+  margin-top: 10px;
+}
+.mainTemp{
+  font-size: 3em;
+  margin-top: 1em;
+}
+.weather{
+  font-size: 2em;
+}
+.description,.location{
+  font-size: 1em;
+
+}
 }
 @media (max-width: 991px) {
     .todaySummary {
