--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
 }
 .mainContainer > *{
     width: 90%;
@@ -58,6 +59,14 @@
         width: fit-content;
         margin-top: 1rem;
       }
+      .appContainer{
+        height: fit-content;
+        overflow-y: auto;
+    }
+    .mainContainer{
+        overflow-y: auto;
+        display: flex;
+    }
 }
 @media (max-width: 768px) {
     .tabToggle > button {
