--- a/src/styles/ForecastChart.css
+++ b/src/styles/ForecastChart.css
@@ -25,8 +25,39 @@
     font-size: 14px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.2);  
 }
-@media (max-width: 768px) {
-    .forecastChartContainer p{
-        font-size: 1rem;
-    }
-}
+@media (max-width: 991px) {
+    .forecastChartContainer{
+      height:24vh;
+  }
+  }
+  @media (max-width: 768px) {
+      .forecastChartContainer p{
+          font-size: 1.2rem;
+          width: 90%;
+          align-self: center;
+          margin-top: 7em;
+          /* margin-left: 1em; */
+      }
+      .forecastChartContainer{
+          /* height:vh; */
+          /* max-width: 100vw; */
+          width: 100%;
+          /* position: relative; */
+          /* background-color: red; */
+      }
+      .chartWrapper{
+          max-width: 100%;
+          margin-left: -2em;
+          font-size: .9rem;
+      }
+  }
+  @media (max-width: 300px) {
+      .forecastChartContainer p{
+          font-size: 1rem;
+      }
+      .chartWrapper{
+          font-size: .5em;
+          width: 100vw;
+          margin-left: -5em;
+      }
+  }
