--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: inter, Arial, Helvetica, sans-serif;
 }
 body{
     background-color: var(--customDarkBlue);
