--- a/src/styles/ForecastTab.css
+++ b/src/styles/ForecastTab.css
@@ -1,5 +1,6 @@
 .forecastTab{
-    height: 50vh;
+    height: auto;
+    margin-bottom: 2em;
     display: flex;
     flex-direction: column;
     gap: 1em;
