--- a/src/styles/TodayExtra.css
+++ b/src/styles/TodayExtra.css
@@ -4,7 +4,7 @@
     margin: 0 ;
     margin-left: 25px;
     border-radius: 25px;
-    padding: 25px;
+    padding: 20px;
     height: fit-content;
     /* background-color: red; */
   }
@@ -101,7 +101,7 @@
   @media (max-width :1400px)and (min-width:1000px) and (max-height:1000px) {
     .todayExtra {
       padding: 25px;
-      height: 40vh;
+      height: auto;
     }
     .extraContainer {
       gap: 1.2em;
